[package]
name = "rust_laull_filelocker"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
hmac = "0.12.1"
async-trait = "0.1.68"
nalgebra = "0.34.1"
rand = "0.9.2"  # 用于生成随机数示例
# reqwest = "0.12.24"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
url = "2.5.7"
# winit = "0.30.12"
aes = "0.8.4"
block-modes = "0.9.1"
pbkdf2 = "0.12.2"
getrandom = "0.2"
ctr = "0.9.2"
ring = "0.17.14"
tempfile = "3.23.0"
egui = "0.33.2"
eframe = "0.33.2"
rfd = "0.16.0"
base64 = "0.22.1"
winres = "0.1.12"
image = "0.24.0"

[profile.release]
# opt-level = "z"        # 优先优化体积（比"3"更小，牺牲部分速度）
lto = true             # 链接时优化（跨模块优化，显著减小体积）
codegen-units = 1      # 单代码生成单元（利于LTO优化，编译变慢但体积更小）
panic = "abort"        #  panic时直接终止（移除unwind回溯代码，节省体积）
strip = true           # 移除调试符号（release模式下有效）
debug = false          # 关闭调试信息

[package.metadata.bundle]
name = "rust_laull_filelocker"
identifier = "com.laull.filelocker"

icon = ["assets/ico/l.ico", "assets/ico/l.png"]
